[tool.poetry]
name = "modx"
version = "0.1.0"
description = ""
authors = ["Aécio Santos <aecio.solando@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.3"
flask-vite = "^0.3.0"
transformers = "^4.32.1"
lancedb = "^0.2.2"
numpy = "^1.25.2"
duckdb = "^0.8.1"
Pillow = "^10.0.0"
pandas = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
